# Civic-Echo

./: .gitignore  README.md
.agents/workflows/: deploy.md
demo-video/: package-lock.json  package.json  tsconfig.json
demo-video/src/: Root.tsx  theme.ts
demo-video/src/scenes/: ClosingScene.tsx  DeployScene.tsx  EchoingScene.tsx  FeaturesScene.tsx  HookScene.tsx  LandingScene.tsx  MapScene.tsx  ReportScene.tsx  TechStackScene.tsx
frontend/: package-lock.json  package.json  supabase-comments.sql  supabase-schema.sql
frontend/scripts/: seed.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/create/: layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/leaderboard/: layout.tsx  page.tsx
frontend/src/app/map/: page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/app/reports/: layout.tsx  page.tsx
frontend/src/components/: CommentSection.tsx  GlobeView.tsx  MapView.tsx  NavSearch.tsx  Navbar.tsx  NewReportForm.tsx  ReportDrawer.tsx  Skeleton.tsx  ToastProvider.tsx  ZkVerificationModal.tsx
frontend/src/hooks/: useZkWhisper.ts
frontend/src/lib/: dummy-data.ts  imageUpload.ts  types.ts
frontend/src/lib/idl/: zk_whisper.json  zk_whisper_types.ts
zk_whisper/: Anchor.toml  package.json
zk_whisper/programs/zk_whisper/: Cargo.toml
zk_whisper/programs/zk_whisper/src/: lib.rs
zk_whisper/tests/: zk_whisper.ts
