[package]
name = "zk-whisper"
version = "0.1.0"
description = "ZK-Whisper Network — Decentralized Anonymous Civic Whistleblowing on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_whisper"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
